trying to fix invisible buttons in about section

--- a/style/styling.css
+++ b/style/styling.css
@@ -284,7 +284,7 @@ header {
     /* outline: 1px solid red; */
 }
 
-@media (min-width: 1275px) and (max-width: 1487px) {
+@media screen and (min-width: 1275px) and (max-width: 1487px) {
 
     * {
         scroll-padding-top: 4em;
@@ -375,7 +375,7 @@ header {
 
 } 
 
-@media (min-width: 1062px) and (max-width: 1274px) {
+@media screen and (min-width: 1062px) and (max-width: 1274px) {
 
     * {
         scroll-padding-top: 4em;
@@ -466,7 +466,7 @@ header {
 
 } 
 
-@media (min-width: 851px) and (max-width: 1062px) {
+@media screen and (min-width: 851px) and (max-width: 1062px) {
 
     * {
         scroll-padding-top: 4em;
@@ -558,7 +558,7 @@ header {
 
 } 
 
-@media (min-width: 638px) and (max-width: 850px) {
+@media screen and (min-width: 638px) and (max-width: 850px) {
     
     h1 {
         font-size: clamp(1.8rem, 1.3792rem + 1.5842vw, 2rem);
@@ -688,7 +688,7 @@ header {
 } 
 
 
-@media (min-width: 425px) and (max-width: 637px) {
+@media screen and (min-width: 425px) and (max-width: 637px) {
 
     h1 {
         font-size: clamp(1.8rem, 1.3792rem + 1.5842vw, 2rem);
@@ -818,7 +818,7 @@ header {
 } 
 
 
-@media (min-width: 320px) and (max-width: 424px) {
+@media screen and (min-width: 320px) and (max-width: 424px) {
 
     * {
         scroll-padding-top: 3.75em;
